[build-system]
requires = [
  "setuptools >= 40.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "ecdhsignatures"
version = "0.0.1"
dependencies = [
    "argparse",
    "behave",
    "coverage",
    "cryptography",
    "wheel",
    ]

[project.scripts]
es = "ecdh_signatures:__main__"
